--- a/README.org
+++ b/README.org
@@ -1,3 +1,3 @@
 * Learn You a Ruby in a University
 
-このリポジトリは、とある大学で、残念な授業の下に Ruby という楽しい言語を勉強しなければいけないみなさんのための助け船となる文書を集めたものです。
+このリポジトリは、大学に図書館学を勉強しに来たはずなのに何故か Ruby を勉強しなければいけなくなった人たちのための、またその授業のレベルでは満足できない人たちのための落ち穂拾いを手助けするための文書の集合です。
