fix code expression

--- a/1-01.org
+++ b/1-01.org
@@ -4,7 +4,7 @@
 
 + Kernel#p
 
-先に説明しておきますが、Hoge#fuga という表記があった時、それは「Hoge クラスの fuga メソッド」を表します。「クラス」というのは、文字列とか、数字とか、配列とかそういうレベルの区切り方です。「じゃあ Kernel って何じゃい」と思うでしょうが、今はあんまり気にしなくていいです (分かる人はここを説明文で代替してください……)。
+先に説明しておきますが、=Hoge#fuga= という表記があった時、それは「Hoge クラスの fuga メソッド」を表します。「クラス」というのは、文字列とか、数字とか、配列とかそういうレベルの区切り方です。「じゃあ Kernel って何じゃい」と思うでしょうが、今はあんまり気にしなくていいです (分かる人はここを説明文で代替してください……)。
 
 テキストの中では、とかく print メソッドが幅を利かせていて、出力系のメソッドはこれしか無いんじゃないかという勢いですが、もちろん他にもあります。行末に自動で改行を挿入してくれる puts、指定したフォーマットで適当に数字や文字列を埋め込んでくれる printf などいろいろありますが、Ruby を勉強する上で絶対に外せない出力系メソッドは何と言っても p メソッドです。print メソッドなど他の出力系のメソッドがとにかくただ普通に文字列を出力するのに対し、p メソッドはクラスの違いが分かるように適度に表現方法を変えて出力してくれます。例えば以下の通り。
 
