change list to header

--- a/README.org
+++ b/README.org
@@ -2,4 +2,4 @@
 
 このリポジトリは、大学に図書館学を勉強しに来たはずなのに何故か Ruby を勉強しなければいけなくなった人たちのための、もしくはその授業のレベルでは満足できない人たちのための落ち穂拾いを手助けするための文書の集合です。
 
-| [[1-01.org ]] | Ruby を学ぶために必要な道具 |
+| [[blob/master/1-01.org ]] | Ruby を学ぶために必要な道具 |
