--- a/1-01.org
+++ b/1-01.org
@@ -2,7 +2,7 @@
 
 最初のテキストは、とにかくがむしゃらにプログラムを書かせるような仕組みになっています。プログラミングの勉強において「写経」は大変重要ですが、写経させるプログラム例を作るのは至難の業です。この章では、そんな辛く苦しい時期を出来るだけ緩和させるような、便利な道具たちを紹介したいと思います。
 
-+ =Kernel#p=
+** =Kernel#p=
 
 先に説明しておきますが、 =Hoge#fuga= という表記があった時、それは「 =Hoge= クラスの =fuga= メソッド」を表します。「クラス」というのは、文字列とか、数字とか、配列とかそういうレベルの区切り方です。「じゃあ =Kernel= って何じゃい」と思うでしょうが、今はあんまり気にしなくていいです (分かる人はここを説明文で代替してください……)。
 
