--- a/1-01.org
+++ b/1-01.org
@@ -44,7 +44,7 @@ irb(main):005:0> foo(hoge, 2)
 irb(main):006:0>
 #+END_SRC
 
-=p= メソッドのお話で「関数型」のお話がありましたが、irbというのは、REPLと呼ばれるものの一種で関数型言語で非常によく使われ、スクリプト言語にも同様のものが取り入れられた、という背景があります。
+=p= メソッドのお話で「関数型」のお話がありましたが、irbというのは、REPLと呼ばれるものの一種です。REPLは関数型言語で非常によく使われ、多くのスクリプト言語で同様のものが作られた、という背景があります。「RubyのREPL」すなわちirbというわけですね。
 REPLとは何の略であるか、というと、 Read-Eval-Print Loopの頭文字です。コマンドプロンプトで(といいつつ、実は上のirbのデモはgnome-terminalでやってますけど)、irbコマンドを実行すると使えます。
 標準入力からコマンドを入れると、入力された文字列をRubyプログラムとして評価(evaluate, eval)して、値をリテラルの形で表示(print)します。それを繰り返してくれます。
 変数やメソッド定義などの情報は、irbがずっと覚えていてくれて、上のように1行目で初期化した変数や2〜4行目で定義したメソッドを5行目で使うというようなことができるわけです。
