--- a/1-01.md
+++ b/1-01.md
@@ -19,11 +19,35 @@
 見れば分かると思いますが、`hoge #=> fuga`という書き方は、「`hoge`を実行すると`fuga`になるよ」という意味です。上のように、整数や浮動小数点数や文字列などの、`puts`や`print`では違いが分からないことがあるオブジェクト同士の違いが分かるように出力してくれるので、とても便利です。Ruby で開発する上ではこの`p`デバッグはとても重要です。プログラムを書いていて、上手く動かないなと思ったら、気になる変数を片っぱしから`p`していきましょう。
 
 ……ちなみに、`Kernel.#p`は、引数として与えられたオブジェクトに対して、`Object#inspect`を呼び(返り値は文字列)、その文字列を標準出力に出力し改行する、というメソッドです。上記の「整数や浮動小数点数や文字列の違いが分かる」というのは、この`Object#inspect`のおかげです。
-上記のコード例にもあるように、Ruby(だけでない多くのプログラミング言語)では`"hoge"`と書くことで、「hoge」という文字列を表します。また、`1`や`1.0`もそれぞれ 1 や 1.0 を表します。
-このような書き方のことを「リテラル」と呼び、ではリテラルでないものは何なのかというと、`foo = "bar"`を実行した上で、`puts foo`を実行すれば、「bar」と出力されます。この時の`foo`を「変数」と呼び、コード中に書かれた時、それは「foo」という文字列ではなく、「今`foo`という名前で呼ばれることになっている何か」という意味になります。
-そして、「今`foo`という名前で呼ばれることになっている何かのリテラルを文字列でくれ」というのが`foo.inspect`です。もっというと、「文字列のリテラルをオブジェクトにしてくれ」という`Kernel.#eval`というのもありまして`p eval(foo.inspect) #=> "bar"`なわけですね。これらが、プログラマが書くコードと、Ruby インタプリタが保持するオブジェクトとの相互変換ができる仕組みを作っているわけです……。
+上記のコード例にもあるように、Ruby(だけでない多くのプログラミング言語)では`"hoge"`と書くことで、「hoge」という文字列を表します。また、`1`や`1.0`もそれぞれ整数の 1 や浮動小数点数の 1.0 を表します。
+このような書き方のことを「リテラル」と呼びます。
+ではリテラルでないものは何なのか。`foo = "bar"`を実行した上で、`puts foo`を実行すれば、「bar」と出力されます。この時の`foo`を「変数」と呼び、コード中に書かれた時、それは「foo」という文字列ではなく、「今`foo`という名前で呼ばれることになっている何か」という意味になります。
+そして、「今`foo`という名前で呼ばれることになっている何かのリテラルを文字列でくれ」という表現が`foo.inspect`です。もっというと、「文字列をRubyコードとして評価してオブジェクトにしてくれ」という`Kernel.#eval`というのもありまして、オブジェクトから作ったリテラルを評価すればもとのリテラルと同じものが出来上がるので、`p eval(foo.inspect) #=> "bar"`なわけですね。これらが、プログラマが書くコードと、Ruby インタプリタが保持するオブジェクトとの相互変換ができる仕組みを作っているわけです……。
 
 ついでに。上のコード例にもあるように、Ruby ではメソッドが取る引数の括弧を省略することが出来ます。これは関数型プログラミングにおいてよく見られる書き方ですが、それ以外のスタイルの言語で引数の括弧を省略することは稀です。Ruby においては出力系のメソッドに限って括弧を省略するような風潮がある感じがしますが、それ以外の場合は分かり辛いので、必ず括弧を付けるようにしましょう。括弧を付けることで「これは関数なんだ」というアピールにもなり、プログラムが読みやすくなります。ただし引数を取らないメソッドには括弧を付けないというのが一般的な Ruby のコーディング規約です。難しいですが段々慣れていくようにしましょう。
+
+……ちなみに、引数の無いメソッドの呼び出しの括弧を省略できるのは、Ruby 以外ではまずありません。Ruby とよく比較されるスクリプト言語である Python ではどうかというと、
+
+	import random
+	def foo():
+		print("foo")
+	def bar():
+		print("bar")
+	random.choice([foo, bar])()
+
+というようなコードを書けます。これは何をしているのかというと、ランダムに`foo()`を実行するのか`bar()`を実行するのか選んでいるのです。
+そのようなことが可能なのは、`foo`や`bar`が、メソッド呼び出しではなく、メソッドそのもののオブジェクトを指し示す識別子(変数であると思って良いです)であるからです。
+Ruby で括弧省略になれると、かなりハマります。気をつけて。
+
+ちなみに、 Ruby で同等のコードを書くと、こうなります。
+
+	def foo
+		puts "foo"
+	end
+	def bar
+		puts "bar"
+	end
+	self.send([:foo, :bar].sample)
 
 ## irb
 
@@ -42,7 +66,7 @@ irb は Rubyist の最高の友達です。たぶん。
 
 `p`メソッドのお話で「関数型」のお話がありましたが、irb というのは、REPL と呼ばれるものの一種です。REPL は関数型言語で非常によく使われ、多くのスクリプト言語で同様のものが作られた、という背景があります。「Ruby の REPL」すなわち irb というわけですね。
 REPL とは何の略であるか、というと、 Read-Eval-Print Loop の頭文字です。コマンドプロンプトで(といいつつ、実は上の irb のデモは gnome-terminal でやってますけど)、irb コマンドを実行すると使えます。
-標準入力からコマンドを入れると、入力された文字列を Ruby プログラムとして評価(evaluate, eval)して、値をリテラルの形で表示(print)します。それを繰り返してくれます。
+標準入力からコマンドを読み取る(read)と、入力された文字列を Ruby プログラムとして評価(evaluate, eval)して、値をリテラルの形で表示(print)します。それを繰り返して(loop)くれます。
 変数やメソッド定義などの情報は、irb がずっと覚えていてくれて、上のように 1 行目で初期化した変数や 2-4 行目で定義したメソッドを 5 行目で使うというようなことができるわけです。
 さて、ところで REPL は`Kernel.#eval`と`Kernel.#p`に関係があります(`Kernel.#print`は全く関係ないので忘れてください)。read はどこいったんだというと、`Kernel.#gets`よりはもう少し賢い`Readline::readline`というものを使っているはずですが、でも、すごく乱暴なことを言うと、gets と eval と p で超簡易版 REPL を実装できます。
 
@@ -63,7 +87,7 @@ irb デモの 3-4 行目の部分に注目してください。`irb(main):003:1>
 	=> nil
 	irb(main):003:0>
 
-`/^\w+$/`という正規表現は、言葉で説明すると(ところで私見だけれど、正規表現は言葉で説明できるのが望ましいと思います)、「始まりから終わりまでが、英数字か_を1個以上並べた文字列である」ですが、このように、実際にマッチさせてみて確認するわけです。
+`/^\w+$/`という正規表現は、言葉で説明すると(ところで私見だけれど、正規表現は言葉で説明できるのが望ましいと思います)、「始まりから終わりまでが、英数字か\_を1個以上並べた文字列である」ですが、このように、実際にマッチさせてみて確認するわけです。
 このように、細かい部品で実験しながら組み立てていく、という「ボトムアップ」なプログラミングに必要不可欠なツールが REPL なのです。
 
 ちなみに、wirble とか pry とかで調べると幸せになれるとかいう話がある。
