--- a/1-01.md
+++ b/1-01.md
@@ -91,3 +91,19 @@ irb デモの 3-4 行目の部分に注目してください。`irb(main):003:1>
 このように、細かい部品で実験しながら組み立てていく、という「ボトムアップ」なプログラミングに必要不可欠なツールが REPL なのです。
 
 ちなみに、wirble とか pry とかで調べると幸せになれるとかいう話がある。
+
+## #{式展開}
+
+授業のテキストの中では、`print`メソッドの引数の中に直接式を埋め込み、それを出力させることでいろいろな動作を確認させています。それぐらい上述の`irb`でやれよという感じがしますが、このようなテスト的な使い方ではなく、実際にプログラムを組む時に、文字列の中に変数の値を埋め込みたい、ということが頻発します。しかし、その度に式と式や文字列の間をコロンで区切るのは、単純に見辛いし、またその見辛さからコロンで区切る場所を間違え、エラーを起こしてしまうことがよくあります。しかしこれは以下の一種の糖衣構文(シンタックスシュガーともいう、書き方の簡単のために特別に導入されている記法一般のことを言います)を使うことでかなり楽になります。
+
+	print(1 + 2, "\n")
+	print("#{1 + 2}\n")
+
+この二つは等価です。すなわち、文字列を表すダブルクォーテーションの中に`#{}`という記号を入れ、この中括弧の中に何らかの式を入れることで、その中の式を評価・展開して文字列の中に埋め込んでくれます。この`#{}`という記号は、一つの文字列の中で何回でも使えます。irb で試してみます(何かの動作を確かめたくなったらまず irb！)。
+
+	irb(main):001:0> str = "aiueo"
+	=> "aiueo"
+	irb(main):002:0> "single: #{str}, double: #{str * 2}"
+	=> "single: aiueo, double: aiueoaiueo"
+
+文字列と文字列がコロンで分割されることがなくなるし、エディタによっては`#{}`の部分を文字列とは別の色でハイライトしてくれるので、こちらの方が見易くなります。また、ダブルクォーテーションが 2 つで済むという利点もあります。Ruby で文字列の中に式を埋め込みたい時は恐らくこのやり方が主流だと思います。是非使ってみてください。
