write using "#{ expr }" and "%s" % expr

--- a/1-01.md
+++ b/1-01.md
@@ -91,3 +91,74 @@ irb デモの 3-4 行目の部分に注目してください。`irb(main):003:1>
 このように、細かい部品で実験しながら組み立てていく、という「ボトムアップ」なプログラミングに必要不可欠なツールが REPL なのです。
 
 ちなみに、wirble とか pry とかで調べると幸せになれるとかいう話がある。
+
+## 式展開とフォーマット
+
+	name = gets.chomp
+	print("This is a ", name, ".\n")
+
+や〜〜め〜〜ろ〜〜〜〜(発狂)。
+やめてください、お願いします(懇願)。
+
+というわけで、先ほどの例(プロ演テキストにガベージコレクトしたい勢いで散らばってる)を、「式展開」で書いてみましょう。
+
+	puts "This is a #{ name }."
+
+いいですね。このように`"ダブルクオーツで囲ったStringリテラル"`の中では、`"#{ 式 }を展開することができる"`のです。`"This is a " + name.to_s + "."`とするのと同等です。式展開の方が綺麗ですね。
+では、こんなのはどうですか。
+
+	names = ["pen", "penguin", "pencil"]
+	name = names.sample
+	puts "This is a #{ name }, and I love #{ name }."
+
+うーん…。いちいち`name = name.sample`とかやるの、なんか嫌ですね。その下の1行で使うためだけに、nameという変数名を使ってしまい、スコープが汚れます。
+こうしたらどうですか。
+
+	names = ["pen", "penguin", "pencil"]
+	puts "This is a %{name}, and I love %{name}." % {name: names.sample}
+
+`{key: expr}`という書き方は、`{:key => expr}`というハッシュの書き方の別の書き方です。これは、`Hash`のインスタンスを作って、`:name`というキーの値として`names.sample`を格納しているので、決してスコープを汚すことはありません。
+この書き方は何かというと、`String#%`というインスタンスメソッドを使っています。`"a string".%(〜〜)`と書いても呼べるのですが、`%`という名前のインスタンスメソッドは特別に演算子を定義することになっています(他にも演算子を定義するメソッド名は色々あります)。
+`%`という演算子は、`5 % 3 #=> 2`という、「割り算のあまり」を計算する演算子(mod)でしたね。「`String`を`Hash`で割ったあまり」という表現は、「フォーマットしろ」というものになります。
+
+フォーマットについて話しだすと、C言語のお話を絶対に避けて通ることができないのが辛いところですね。
+
+	#include <stdio.h>
+	int main(){
+		int m, n;        // 変数の宣言(場所とりのようなもの)
+		scanf("%d", &m); // 標準入力から数値を読み取りmに格納
+		scanf("%d", &n); // 標準入力から数値を読み取りnに格納
+		printf("%d + %d = %d\n", m, n, m + n);
+	}
+
+1行ずつ2つの数字を入れると(例えば3と4)、足し算の式を表示して(3 + 4 = 7)改行します。表示には`printf(3)`というものを使っています。Ruby にも実は同等の`Kernel.#printf`があります。
+この`printf(3)`とは、まず第1引数に「フォーマット」を指定し、何らかの文字列が入るべき場所は`%s`やら`%d`やらが書かれているので、`%d`のところに差し掛かったら、引数を1つ使って数値を表示する、という動作を行います。
+それを、標準出力に出すのではなく、文字列を作る`sprintf(3)`があり、やはりRubyにも`Kernel.#sprintf`があります。
+そして、`sprintf("%d + %d = %d", m, n, m + n)`とする代わりに、`"%d + %d = %d" % [m, n, m + n]`と書けるのです。
+でもでも、フォーマット`%d`は何番目かひと目でわからないのに、配列の要素は何番目に入るものかを意識しないと書けません。こういうのは「セマンティクス的に良くない」のです。
+そこで、ハッシュを使って名前をつけよう、という先ほどの提案が出るわけです。
+
+とはいえ、まずは配列で書くsprintfの書き方を覚えないと使い方が分からないので、いくつか覚えておくべきフォーマットを紹介しましょう(もちろん、るりまを見れば載ってますよ)。
+
+`%d`   10進整数(decimal)
+`%2d`  2桁で右揃いした10進整数
+`%02d` 2桁で右揃いにして、足らない桁を0で埋めた10進整数
+この`2`というのは、`3`にもできます。
+
+`%x`   16進整数(hexadecimal)
+`%X`   16進整数(A-Fが大文字か小文字かで`%x`と異なる)
+勘の良い方はお気づきでしょうが、`%8x`とか`%02X`とか、同様に作れますよ。
+
+`%f`   浮動小数点数
+`%.2f` 小数点以下2桁までの浮動小数点数(非常によく使うので重要)
+当然`%.2f`の`2`も変えられます。
+
+`%s`   文字列
+
+そしてこれを覚えた上で、ハッシュのフォーマットを使うときには、こうします。
+
+	"%{name} = %<value>.2f" % {name: "Pi", value: Math::PI}
+
+`%{key}`というのは、そのまま`to\_s`されて埋め込まれるような感じで、式展開と同じです。`%<key>.2f`というのが、ハッシュのキーで参照する値を指定しつつフォーマットする形です。
+
+というわけで、式展開とフォーマットを駆使して、楽しくコーディングしましょう。
