Add "void" to "int main()"

--- a/1-01.md
+++ b/1-01.md
@@ -130,7 +130,7 @@ irb デモの 3-4 行目の部分に注目してください。`irb(main):003:1>
 フォーマットについて話しだすと、C言語のお話を絶対に避けて通ることができないのが辛いところですね。
 
 	#include <stdio.h>
-	int main(){
+	int main(void){
 		int m, n;        // 変数の宣言(場所とりのようなもの)
 		scanf("%d", &m); // 標準入力から数値を読み取りmに格納
 		scanf("%d", &n); // 標準入力から数値を読み取りnに格納
