append about heredoc

--- a/1-01.md
+++ b/1-01.md
@@ -168,3 +168,34 @@ irb デモの 3-4 行目の部分に注目してください。`irb(main):003:1>
 `%{key}`というのは、そのまま`to\_s`されて埋め込まれるような感じで、式展開と同じです。`%<key>.2f`というのが、ハッシュのキーで参照する値を指定しつつフォーマットする形です。
 
 というわけで、式展開とフォーマットを駆使して、楽しくコーディングしましょう。
+
+# &lt;&lt;'EOT' # ヒアドキュメント
+
+	print("Content-Type: text/heml; charset=UTF-8\n\n")
+	print("<!DOCTYPE html>")
+	print("<html lang='ja'>")
+	# 以下HTMLを1行ずつprint略
+
+どひゃ〜〜〜、って感じですよね。そんな時に助けてくれる、正義の味方ヒアドキュメント。
+
+	require 'cgi'
+	
+	print <<EOF
+	Content-Type: text/heml; charset=UTF-8
+	
+	<!DOCTYPE html>
+	<html lang='ja'>
+	<!-- 中略 -->
+	  <body>
+	    <p>#{ CGI::escapeHTML("式展開もできるよ! (>_<)") }</p>
+	  </body>
+	</html>
+	EOF
+
+このように、`<<EOF`で始めたら`EOF`だけで終わる行(インデントがあったり余分な文字が含まれていたりしてはいけない)まで全体が1つのStringのリテラルになります。`EOS`でも`HTML`でもなんでも良いですが、始まりと終わりは同じにしないといけません。
+`<`や`>`は、そのままHTMLソースに書き込んでしまうと、タグの開始文字・終了文字として解釈されてしまうので、「インジェクション」になってしまうので、それをエスケープしたいと思った時、`CGI::escapeHTML`がちからになってあげられるよ! そして、式展開も使えます。
+式展開ができたりバックスラッシュエスケープが使えたりするのは、`"ダブルクオーツのStringリテラル"`と同じです。式展開やバックスラッシュエスケープを抑制したければ`<<'EOF'`とします。この場合でも、終端は`EOF`です。
+
+CGIを書く機会が必修科目(知識情報演習I)であると思うので、その時はこれを思い出してあげてください。
+
+EOT
