Fix # heredoc -> ## heredoc

--- a/1-01.md
+++ b/1-01.md
@@ -169,7 +169,7 @@ irb デモの 3-4 行目の部分に注目してください。`irb(main):003:1>
 
 というわけで、式展開とフォーマットを駆使して、楽しくコーディングしましょう。
 
-# &lt;&lt;'EOT' # ヒアドキュメント
+## &lt;&lt;'EOT' # ヒアドキュメント
 
 	print("Content-Type: text/heml; charset=UTF-8\n\n")
 	print("<!DOCTYPE html>")
