append about `るりま'

--- a/1-01.md
+++ b/1-01.md
@@ -116,9 +116,9 @@ irb デモの 3-4 行目の部分に注目してください。`irb(main):003:1>
 	name = names.sample
 	puts "This is a #{ name }, and I love #{ name }."
 
-うーん…。いちいち`name = name.sample`とかやるの、なんか嫌ですね。その下の1行で使うためだけに、nameという変数名を使ってしまい、スコープが汚れます。
+うーん…。いちいち`name = name.sample`とかやるの、なんか嫌ですね。その下の1行で使うためだけに、name という変数名を使ってしまい、スコープが汚れます。
 こうしたらどうですか。
-式展開は Ruby でよく使われますが、 Pythonistなんかが大好きなのは、フォーマットです。
+式展開は Ruby でよく使われますが、 Pythonist なんかが大好きなのは、フォーマットです。
 
 	names = ["pen", "penguin", "pencil"]
 	puts "This is a %{name}, and I love %{name}." % {name: names.sample}
@@ -193,9 +193,29 @@ irb デモの 3-4 行目の部分に注目してください。`irb(main):003:1>
 	EOF
 
 このように、`<<EOF`で始めたら`EOF`だけで終わる行(インデントがあったり余分な文字が含まれていたりしてはいけない)まで全体が1つのStringのリテラルになります。`EOS`でも`HTML`でもなんでも良いですが、始まりと終わりは同じにしないといけません。
-`<`や`>`は、そのままHTMLソースに書き込んでしまうと、タグの開始文字・終了文字として解釈されてしまうので、「インジェクション」になってしまうので、それをエスケープしたいと思った時、`CGI::escapeHTML`がちからになってあげられるよ! そして、式展開も使えます。
+`<`や`>`は、そのままHTMLソースに書き込んでしまうと、タグの開始文字・終了文字として解釈されて「インジェクション」になってしまうので、それをエスケープしたいと思った時、`CGI::escapeHTML`がちからになってあげられるよ! そして、式展開も使えます。
 式展開ができたりバックスラッシュエスケープが使えたりするのは、`"ダブルクオーツのStringリテラル"`と同じです。式展開やバックスラッシュエスケープを抑制したければ`<<'EOF'`とします。この場合でも、終端は`EOF`です。
 
 CGIを書く機会が必修科目(知識情報演習I)であると思うので、その時はこれを思い出してあげてください。
 
 EOT
+
+## "本"をを捨てて、るりまへ出よう。
+
+プログラミング演習のテキスト、最高に面白いですよね。
+
+	注意：ここでの「本」は,「たのしい Ruby 第 4 版」を指す.
+
+うーん…、~~著者と癒着でもあるんじゃないかなぁ。~~
+
+いや、ね、決して本の質にケチをつけるわけではないのですが、もっと体系的に網羅的に、あらゆる機能をまとめたドキュメントが欲しい時がありますよね。
+
+そこでるりまです。
+
+[Ruby Reference Manual - るりま](http://docs.ruby-lang.org/ja/)
+
+開くと「るりまサーチ」というものがありますが、全文一括検索ができてしまいます。これはとっても便利。もう本を目grepするのは辞めましょう。
+
+特に、授業でプログラミングする上でも、Ruby 以外の言語を書く機会は、これからいくらでも(あるひとは)あるかとは思うので、ドキュメントを自分で呼んで使いこなすという癖をつけることが必要です。
+
+というわけで、バグ取りのためにドキュメントの虫になりましょうというお話でした。
