add reference to other commit and fix typo

--- a/1-01.md
+++ b/1-01.md
@@ -108,6 +108,8 @@ irb デモの 3-4 行目の部分に注目してください。`irb(main):003:1>
 
 文字列と文字列がコロンで分割されることがなくなるし、エディタによっては`#{}`の部分を文字列とは別の色でハイライトしてくれるので、こちらの方が見易くなります。また、ダブルクォーテーションが 2 つで済むという利点もあります。Ruby で文字列の中に式を埋め込みたい時は恐らくこのやり方が主流だと思います。是非使ってみてください。
 
+この式展開については本文書のコントリビュータである @7kry くんも書いてくれました。彼の記述については[このコミット](https://github.com/7kry/rubylearn/blob/aac9ca324fa7bc3706877866b5e83356f9cdabd0/1-01.md#式展開とフォーマット)をご覧ください。
+
 ## "%s(%d)" % ["sprintf", 3]
 
 では、こんな式展開はどうですか。
@@ -171,7 +173,7 @@ irb デモの 3-4 行目の部分に注目してください。`irb(main):003:1>
 
 ## &lt;&lt;'EOT' # ヒアドキュメント
 
-	print("Content-Type: text/heml; charset=UTF-8\n\n")
+	print("Content-Type: text/html; charset=UTF-8\n\n")
 	print("<!DOCTYPE html>")
 	print("<html lang='ja'>")
 	# 以下HTMLを1行ずつprint略
