Fix some typos and ugly layout.

--- a/1-01.md
+++ b/1-01.md
@@ -42,10 +42,10 @@ Ruby で括弧省略になれると、かなりハマります。気をつけて
 ちなみに、 Ruby で同等のコードを書くと、こうなります。
 
 	def foo
-		puts "foo"
+	  puts "foo"
 	end
 	def bar
-		puts "bar"
+	  puts "bar"
 	end
 	self.send([:foo, :bar].sample)
 
@@ -149,17 +149,24 @@ irb デモの 3-4 行目の部分に注目してください。`irb(main):003:1>
 とはいえ、まずは配列で書くsprintfの書き方を覚えないと使い方が分からないので、いくつか覚えておくべきフォーマットを紹介しましょう(もちろん、るりまを見れば載ってますよ)。
 
 `%d`   10進整数(decimal)
+
 `%2d`  2桁で右揃いした10進整数
+
 `%02d` 2桁で右揃いにして、足らない桁を0で埋めた10進整数
-この`2`というのは、`3`にもできます。
+
+……この`2`というのは、`3`にもできます。
 
 `%x`   16進整数(hexadecimal)
+
 `%X`   16進整数(A-Fが大文字か小文字かで`%x`と異なる)
-勘の良い方はお気づきでしょうが、`%8x`とか`%02X`とか、同様に作れますよ。
+
+……勘の良い方はお気づきでしょうが、`%8x`とか`%02X`とか、同様に作れますよ。
 
 `%f`   浮動小数点数
+
 `%.2f` 小数点以下2桁までの浮動小数点数(非常によく使うので重要)
-当然`%.2f`の`2`も変えられます。
+
+……当然`%.2f`の`2`も変えられます。
 
 `%s`   文字列
 
@@ -167,7 +174,7 @@ irb デモの 3-4 行目の部分に注目してください。`irb(main):003:1>
 
 	"%{name} = %<value>.2f" % {name: "Pi", value: Math::PI}
 
-`%{key}`というのは、そのまま`to\_s`されて埋め込まれるような感じで、式展開と同じです。`%<key>.2f`というのが、ハッシュのキーで参照する値を指定しつつフォーマットする形です。
+`%{key}`というのは、そのまま`to_s`されて埋め込まれるような感じで、式展開と同じです。`%<key>.2f`というのが、ハッシュのキーで参照する値を指定しつつフォーマットする形です。
 
 というわけで、式展開とフォーマットを駆使して、楽しくコーディングしましょう。
 
@@ -183,7 +190,7 @@ irb デモの 3-4 行目の部分に注目してください。`irb(main):003:1>
 	require 'cgi'
 	
 	print <<EOF
-	Content-Type: text/heml; charset=UTF-8
+	Content-Type: text/html; charset=UTF-8
 	
 	<!DOCTYPE html>
 	<html lang='ja'>
