Fix some explanation.

--- a/1-01.md
+++ b/1-01.md
@@ -154,7 +154,7 @@ irb デモの 3-4 行目の部分に注目してください。`irb(main):003:1>
 
 `%02d` 2桁で右揃いにして、足らない桁を0で埋めた10進整数
 
-……この`2`というのは、`3`にもできます。
+……この`2`というのは、`3`にでも`4`にでもできます。`String#rjust`と同じですね(るりまで調べよう！)。
 
 `%x`   16進整数(hexadecimal)
 
@@ -164,7 +164,7 @@ irb デモの 3-4 行目の部分に注目してください。`irb(main):003:1>
 
 `%f`   浮動小数点数
 
-`%.2f` 小数点以下2桁までの浮動小数点数(非常によく使うので重要)
+`%.2f` 小数点以下2桁までの浮動小数点数*(非常によく使うので重要)*
 
 ……当然`%.2f`の`2`も変えられます。
 
